rust-c-interop-example/lib/exampleC/src/exampleC.h

// exampleC.h

extern int addTwoInt32(int a, int b);
extern double addTwoDoubles(double a, double b);
extern int sendTenToFunction(int (*func)(int));
extern char *getAString();
extern int takeAString(const char *str);
extern int totalNumbers(int length, int nums[]);